# Kora_Tui_Bot

./: .env.example  .wget-hsts  Cargo.toml  README.md  README_BACKEND.md  botlogic.md  config.toml  create.sh  explanation.md.resolved  setup.sh  work.md
docs/: BOTLOGIC.md  CONFIGURATION.md  SETUP.md
kora-test/client/: package.json
kora-test/server/: kora.toml
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/cli/: commands.rs
src/kora/: mod.rs  monitor.rs  types.rs
src/reclaim/: batch.rs  eligibility.rs  engine.rs  mod.rs
src/solana/: accounts.rs  client.rs  mod.rs  rent.rs
src/storage/: db.rs  mod.rs  models.rs
src/telegram/: auto_notify.rs  bot.rs  callbacks.rs  commands.rs  formatters.rs  mod.rs  notifications.rs
src/treasury/: mod.rs  monitor.rs  reconciliation.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
src/tui/components/: accounts_table.rs  chart.rs  header.rs  help.rs  logs.rs  mod.rs  stats.rs
src/tui/screens/: accounts.rs  dashboard.rs  mod.rs  operations.rs  settings.rs
