[package]
name = "kora-rent-reclaim-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana Core
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"
tui-input = "0.8"

# Utilities
indicatif = "0.17"
bs58 = "0.5"

# Telegram Bot
teloxide = { version = "0.12", features = ["macros"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"

[features]
default = ["tui"]
tui = []

[[bin]]
name = "kora-reclaim"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

